# Machine_Learning_Project

./: Project_Machine_Learningg.ipynb  README.md  pyproject.toml  requirements.txt
src/: best_model.h5  train_model.py
streamlit_ML/: pyproject.toml
streamlit_ML/src/: app.py  classification_report.txt
streamlit_ml/: __init__.py
