[tool.poetry]
name = "streamlit-ml"
version = "0.1.0"
description = "Streamlit ML App"
authors = ["Rifadah Husna"]
readme = "README.md"

# 🔑 INI PALING PENTING
package-mode = false

[tool.poetry.dependencies]
python = ">=3.10,<3.13"
streamlit = "^1.32.0"
torch = "*"
torchvision = "*"
numpy = "*"
pandas = "*"
scikit-learn = "*"
matplotlib = "*"
seaborn = "*"
transformers = "*"

[build-system]
requires = ["poetry-core>=1.8.0"]
build-backend = "poetry.core.masonry.api"
