[tool.poetry]
name = "streamlit-ml"
version = "0.1.0"
description = "Streamlit ML App"
authors = ["Rifadah Husna"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = ">=3.10,<3.12"

streamlit = ">=1.32,<1.36"
numpy = ">=1.24,<2.1"
pandas = ">=1.5,<2.2"
scikit-learn = ">=1.3,<1.6"
matplotlib = ">=3.7,<3.9"
seaborn = ">=0.12,<0.14"

torch = ">=2.0,<2.3"
torchvision = ">=0.15,<0.18"
transformers = ">=4.36,<4.42"

[build-system]
requires = ["poetry-core>=1.8.0"]
build-backend = "poetry.core.masonry.api"
